Fix "invisible" buttons

--- a/src/app/sets/sets-learn/card/card.component.scss
+++ b/src/app/sets/sets-learn/card/card.component.scss
@@ -29,7 +29,7 @@
         left: 0;
         border: none;
         background: none;
-        color: $white;
+        text-indent: -200vw;
         border-top-left-radius: 2.5rem;
         border-bottom-right-radius: 2.5rem;
 
