--- a/src/app/sets/sets-panel/set/set.component.scss
+++ b/src/app/sets/sets-panel/set/set.component.scss
@@ -26,8 +26,8 @@
             width: 100%;
             height: 100%;
             background: none;
-            color: $white;
             border: none;
+            text-indent: -200vw;
         }
     }
 
